# TaskA.Cpp

./: CMakeLists.txt  README.md  bitwise_operations.h  cardinality.cpp  disjoint_conjunctive.cpp  emplace.cpp  emptiness_nonempty.cpp  erase.cpp  inclusion_equality.cpp  insert.cpp  main.cpp  member.cpp  operations.cpp  print.cpp  relations.cpp
